# doctown-v12

./: .gitignore  README.md  example.py  pyproject.toml  test_ingest.py  test_summarizer.py
src/: __main__.py  chunking.py  clustering.py  docpack.py  models.py  pipeline.py
src/ingest/: __init__.py  github.py  ingest.py  vfs.py  zip_reader.py
src/intent/: orchestrator.py  schema_builder.py  spec.py
src/intent/examples/: codebase_docs.yaml  financial_analysis.yaml  investor_pitch.yaml  legal_review.yaml  minimal.yaml  risk_matrix.yaml
src/summarizer/: __init__.py  prompts.py  schemas.py  summarize.py
